/*
 * $Id: ChangeLog,v 1.2022 2004/01/09 08:12:49 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-01-09 09:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * bin/bld.bat
    * corrected compiler checking
    * updated msvc section for gtwvt support

2004-01-09 00:12 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * include/hbgtwvt.h
    * Minor MSVC correction

2004-01-08 14:15 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
   * xharbour/source/rtl/gtwvt/gtwvt.c
     + Wvt_DrawBoxGroupRaised( nTop, nLeft, nBottom, nRight )
     ! Wvt_SetMouseMove( lSetMove )
       Now the function returns the previous state of mouse movement set flag.

2004-01-07 15:10 UTC+0100 Lorenzo Fiorini <lorenzo_fiorini/at/tin.it>
   * source/rtl/gtwvt/gtwvt.c
     * add HB_OS_WIN_32_USED and changed includes to fix mingw32/OpenWatcom compile

2004-01-07 12:10 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
   * xharbour/source/rtl/gtwvt/gtwvt.c
     * Wvt_DrawBoxGet()
       Optimized to use _s.hdc instead of GetDC()/ReleaseDC() calls.
     * Added Some comments.

     /*
         The above three messages were deletd from the changeLog, reported by
         Francessco. And as I do not know how to, I am adding them again.
         Why these message deleted, I do not know.
     */

2004-01-08 15:45 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * tests/bldtest.bat
    * Fixed to show help if called with no params (was hung).
    * Clean after %2.c|obj|tds and %3.c|obj|tds if existing.
    + Added support for /WVT or /wvt and logic to allow multiple arguments support.

2004-01-08 14:15 UTC+0530 Pritpal Bedi <pritpal@vouchcac.com>
  * xharbour/source/rtl/gtwvt/gtwvt.c
    + Wvt_DrawBoxGroupRaised( nTop, nLeft, nBottom, nRight )
    ! Wvt_SetMouseMove( lSetMove )
      Now the function returns the previous state of mouse movement set flag.
