@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2022 2004/01/09 08:12:49 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.2023 2004/01/09 14:14:03 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-01-09 09:33 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
+  * source/rtl/gtwvt/gtwvt.c
+    * updated tone handling to be consistant with gtwin
 
 2004-01-09 09:15 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * bin/bld.bat
